style.css
body{
    background-color: rgb(56, 64, 71);
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    overflow-wrap: anywhere;
    background-position: center;
    background-attachment: fixed;
}
.center{
    justify-content: center;
    align-items: center;
}

dialog{
    padding: 0;
    background-color: rgb(82, 6, 153);
    color: white;
}
dialog .wrapper{
    padding: 16px;
    justify-content: center;
    align-items: center;
    text-align: center;
}

button {
    cursor: pointer;
}

.categoryBox{
    position: relative;
    font-size: 1.1rem;
    color: white;
    font-weight: bold;
    margin-right: 15px;
    margin-bottom: 25px;
    border: 3px solid rgb(255, 255, 255);
    text-align: center;
    width: 160px;
    height: 200px;
}
.categoryLabelBox{
    font-size: 1.2rem;
    color: white;
    font-weight: bold;
    border: 3px solid rgba(255, 255, 255, 100);
    display: grid;
    width: 160px;
    height: 100px;
    justify-content: center;;
    text-align: center;
    align-items: center;
    box-sizing: border-box;
}
.categoryResultBox{
    font-size: 1.1rem;
    color: rgb(255, 255, 255);
    font-weight: bold;
    border: 3px solid rgba(255, 255, 255, 100);
    display: grid;
    width: 160px;
    height: 100px;
    justify-content: center;
    text-align: center;
    align-items: center;
    box-sizing: border-box;
}

.infoParagraphs{
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.2rem;
    margin-right: 10px;
    color: white;
    font-weight: bold;
}
.grid-container{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(180px, 180px));
    justify-content: center;
}

.hrclass{
    border: 5px solid rgb(47, 3, 77);
    min-width: 99.9%;
    margin-bottom: 50px;
    margin-top: 25px;
}
.gameResultsLogo{
    width: 14rem;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

#runnerInput{
    display: flex;
    margin-top: 40px;
}
#runnerInputBox{
    font-size: 1.2rem;
    border-radius: 5px;
}
#runnerSubmit{
    font-size: 1.2rem;
    border-radius: 5px;
    margin-left: 10px;
}

#resultText{
    font-size: 1.3rem;
}
#runnerNameText{
    font-size: 1.4rem;
    font-weight: bold;
}
#runnerInfoText{
    font-size: 1.2rem;
    white-space: pre-line;
}

#showResults{
    text-align: center;
}
#showResultsBtn{
    display: none;
    margin-top: 50px;
    font-size: 2rem;
    border-style: none;
    border-radius: 20px;
    background-color: rgb(69, 163, 69);
    color: rgb(255, 255, 255);
    width: 15%;
    cursor: pointer;
}
#showResultsBtn:hover{
    background-color: rgb(55, 129, 55);
}

#exitDialogue{
    font-weight: bold;
    font-size: 2.5rem;
    position: absolute;
    right: 5px;
    color: white;
    background-color: rgba(255, 255, 255, 0);
    border-style: none;
}
#exitDialogue:hover{
    color: rgb(206, 206, 206);
}

.categoryTooltip{
    font-weight: bold;
    font-size: 1.2rem;
    position: absolute;

    bottom: 170px;
    left: 120px;
    color: white;
    background-color: rgba(0, 0, 0, 0.534);
    border-radius: 50%;
    border-style: none;
}

#copyResultsBtn{
    font-weight: bold;
    font-size: 2rem;
    border-style: none;
    border-radius: 20px;
    background-color: rgb(82, 197, 82);
    color: rgb(255, 255, 255);
    width: fit-content;
}
#copyResultsBtn:hover{
    background-color: rgb(63, 146, 63);
}

#copyResultsTwitchBtn{
    font-size: 1.2rem;
    margin-top: 15px;
    border-style: none;
    border-radius: 20px;
    background-color: rgb(79, 175, 79);
    color: rgb(255, 255, 255);
    width: fit-content;
}
#copyResultsTwitchBtn:hover{
    background-color: rgb(55, 129, 55);
}
#confirmCopied{
    font-size: 1.1em;
    font-style: italic;
}

[data-tooltip]::after{
    position: absolute;
    width: 200px;
    left: calc(50% - 100px);
    bottom: 125%;
    text-align: center;
    box-sizing: border-box;
    
    content: attr(data-tooltip);
    color: white;
    background: rgba(0, 0, 0, 0.85);
    padding: 8px;
    border-radius: 10px;
    font-size: 1rem;
    font-weight: bold;

    visibility: hidden;
    opacity: 0;
    transform: translateY(10px);
    transition: opacity 0.3s, transform 0.2s;
}
[data-tooltip]:hover::after{
    opacity: 1;
    visibility: visible;
    transform: translateY(0);
}

